@@ -106,6 +106,11 @@
   // SOP classes (aka. "promiscuous mode")
   "UnknownSopClassAccepted"            : false,
 
+  // Set the timeout (in seconds) after which the DICOM associations
+  // are closed by the Orthanc SCP (server) if no further DIMSE
+  // command is received from the SCU (client).
+  "DicomScpTimeout" : 30,
+
 
 
   /**
@@ -157,6 +162,11 @@
      **/
     // "clearcanvas" : [ "CLEARCANVAS", "192.168.1.1", 104, "ClearCanvas" ]
   },
+
+  // The timeout (in seconds) after which the DICOM associations are
+  // considered as closed by the Orthanc SCU (client) if the remote
+  // DICOM SCP (server) does not answer.
+  "DicomScuTimeout" : 10,
 
   // The list of the known Orthanc peers
   "OrthancPeers" : {
